feat:resetpassword page

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
      --color-brandAsh-500: #9C969B;
      --color-brandAsh-600: #F6F4F6;
      --color-brandRed: #F43F5E;
+     --color-brandGreen: #16A34A;
      --text-size13: 13px;
      --text-size32: 32px;
 
