--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,8 @@
      --text-size16: 16px;
      --text-size32: 32px;
      --shadow-sm: 0px 2px 4px 0px hsla(240, 9%, 46%, 0.12), 0px 0px 8px 0px hsla(240, 9%, 46%, 0.07), 0px 32px 13px 0px hsla(240, 9%, 46%, 0.01);
+     --shadow-formblock: 0px 0px 1px 0px #00000029, 0px 1px 4px 0px #00000014;
+     --shadow-light: 0px 1px 2px 0px #00000014;
      --radius-size5: 5px;
 
      @keyframes scrollVertical {
@@ -99,3 +101,77 @@
      font-size: 14px;
      color: var(--color-brandAsh-500);
    }
+
+   .stepwrapper{
+   }
+
+   .stepwrapper .ant-steps .ant-steps-item-finish .ant-steps-item-icon{
+    background-color: transparent;
+    border-color: #e6f4ff;
+}
+
+.stepwrapper .ant-steps-item .ant-steps-item-process .ant-steps-item-active{
+background-color: red;
+}
+
+.stepwrapper .ant-steps .ant-steps-item-process .ant-steps-item-icon{
+  background-color: transparent;
+  border: 1px solid var(--color-brandPink);
+}
+
+.stepwrapper .ant-steps .ant-steps-item-process .ant-steps-item-icon >.ant-steps-icon {
+  color: var(--color-brandPink);
+}
+
+ .stepwrapper .ant-steps .ant-steps-item-process >.ant-steps-item-container>.ant-steps-item-content>.ant-steps-item-title {
+  color: var(--color-brandPink);
+  font-size: 14px;
+    font-weight: 500;
+  }
+
+  .stepwrapper .ant-steps .ant-steps-item-wait .ant-steps-item-icon {
+ background-color: transparent;
+  border: 1px solid var(--color-brandAsh);
+  }
+
+   .stepwrapper .ant-steps .ant-steps-item-wait>.ant-steps-item-container>.ant-steps-item-content>.ant-steps-item-title {
+    color: var(--color-brandAsh);
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.ant-steps .ant-steps-item-process>.ant-steps-item-container>.ant-steps-item-content>.ant-steps-item-title::after{
+  width: 0;
+}
+
+ .stepwrapper .ant-steps .ant-steps-item {
+flex: none;
+}
+
+.radioWrapper .ant-radio-button-wrapper{
+border: 1px solid var(--color-brandAsh-900);
+border-radius: var(--radius-lg);
+height: 100%;
+  /* height: 80px; */
+  padding: 10px 0px 0px 0px;
+  /* justify-content: start;
+  align-items: start; */
+}
+
+/* .radioWrapper .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled)::before {
+  width: 0;
+} */
+
+.radioWrapper .ant-radio-button-wrapper:not(:first-child)::before{
+  width: 0;
+}
+
+.radioWrapper .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled){
+  border: 1px solid var(--color-brandPink);
+  background-color: #FDF7FC;
+  color: var(--color-brandBlack);
+}
+
+.radioWrapper .ant-radio-button-wrapper:hover{
+  color: var(--color-brandBlack);
+}
