--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
    @theme {
      --font-inter: "Inter", sans-serif;
      --color-brandPink: #FA18D0;
+     --color-brandPink-100: #FBEEF9;
      --color-brandPinkHover: #D705B0;
      --color-brandPinkDisabled: rgba(250, 24, 208, 0.4);
      --color-brandBlack: #12100C;
@@ -21,6 +22,8 @@
      --color-brandGreen: #16A34A;
      --color-brandGreen-100: #11813C;
      --color-brandOrange-100: #FFF7EA;
+     --color-brandPurple: #6D28D8;
+     --color-brandPurple-100: #F5F3FF;
      --text-size13: 13px;
      --text-size16: 16px;
      --text-size32: 32px;
@@ -102,76 +105,76 @@
      color: var(--color-brandAsh-500);
    }
 
-   .stepwrapper{
+   .stepwrapper {}
+
+   .stepwrapper .ant-steps .ant-steps-item-finish .ant-steps-item-icon {
+     background-color: transparent;
+     border-color: #e6f4ff;
    }
 
-   .stepwrapper .ant-steps .ant-steps-item-finish .ant-steps-item-icon{
-    background-color: transparent;
-    border-color: #e6f4ff;
-}
+   .stepwrapper .ant-steps-item .ant-steps-item-process .ant-steps-item-active {
+     background-color: red;
+   }
 
-.stepwrapper .ant-steps-item .ant-steps-item-process .ant-steps-item-active{
-background-color: red;
-}
+   .stepwrapper .ant-steps .ant-steps-item-process .ant-steps-item-icon {
+     background-color: transparent;
+     border: 1px solid var(--color-brandPink);
+   }
 
-.stepwrapper .ant-steps .ant-steps-item-process .ant-steps-item-icon{
-  background-color: transparent;
-  border: 1px solid var(--color-brandPink);
-}
+   .stepwrapper .ant-steps .ant-steps-item-process .ant-steps-item-icon>.ant-steps-icon {
+     color: var(--color-brandPink);
+   }
 
-.stepwrapper .ant-steps .ant-steps-item-process .ant-steps-item-icon >.ant-steps-icon {
-  color: var(--color-brandPink);
-}
+   .stepwrapper .ant-steps .ant-steps-item-process>.ant-steps-item-container>.ant-steps-item-content>.ant-steps-item-title {
+     color: var(--color-brandPink);
+     font-size: 14px;
+     font-weight: 500;
+   }
 
- .stepwrapper .ant-steps .ant-steps-item-process >.ant-steps-item-container>.ant-steps-item-content>.ant-steps-item-title {
-  color: var(--color-brandPink);
-  font-size: 14px;
-    font-weight: 500;
-  }
-
-  .stepwrapper .ant-steps .ant-steps-item-wait .ant-steps-item-icon {
- background-color: transparent;
-  border: 1px solid var(--color-brandAsh);
-  }
+   .stepwrapper .ant-steps .ant-steps-item-wait .ant-steps-item-icon {
+     background-color: transparent;
+     border: 1px solid var(--color-brandAsh);
+   }
 
    .stepwrapper .ant-steps .ant-steps-item-wait>.ant-steps-item-container>.ant-steps-item-content>.ant-steps-item-title {
-    color: var(--color-brandAsh);
-    font-size: 14px;
-    font-weight: 400;
-}
+     color: var(--color-brandAsh);
+     font-size: 14px;
+     font-weight: 400;
+   }
 
-.ant-steps .ant-steps-item-process>.ant-steps-item-container>.ant-steps-item-content>.ant-steps-item-title::after{
-  width: 0;
-}
+   .ant-steps .ant-steps-item-process>.ant-steps-item-container>.ant-steps-item-content>.ant-steps-item-title::after {
+     width: 0;
+   }
 
- .stepwrapper .ant-steps .ant-steps-item {
-flex: none;
-}
+   .stepwrapper .ant-steps .ant-steps-item {
+     flex: none;
+   }
 
-.radioWrapper .ant-radio-button-wrapper{
-border: 1px solid var(--color-brandAsh-900);
-border-radius: var(--radius-lg);
-height: 100%;
-  /* height: 80px; */
-  padding: 10px 0px 0px 0px;
-  /* justify-content: start;
-  align-items: start; */
-}
+   .radioWrapper .ant-radio-button-wrapper {
+     border: 1px solid var(--color-brandAsh-900);
+     border-radius: var(--radius-lg);
+   }
 
-/* .radioWrapper .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled)::before {
-  width: 0;
-} */
+   .test .ant-radio-button-wrapper {
+     border: 1px solid var(--color-brandAsh-900);
+     border-radius: 100px;
+   }
 
-.radioWrapper .ant-radio-button-wrapper:not(:first-child)::before{
-  width: 0;
-}
+   .radioWrapper .ant-radio-button-wrapper:not(:first-child)::before {
+     width: 0;
+   }
 
-.radioWrapper .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled){
-  border: 1px solid var(--color-brandPink);
-  background-color: #FDF7FC;
-  color: var(--color-brandBlack);
-}
+   .radioWrapper .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled) {
+     border: 1px solid var(--color-brandPink);
+     background-color: #FDF7FC;
+     color: var(--color-brandBlack);
+   }
 
-.radioWrapper .ant-radio-button-wrapper:hover{
-  color: var(--color-brandBlack);
-}
+   .radioWrapper .ant-radio-button-wrapper:hover {
+     color: var(--color-brandBlack);
+   }
+
+   .radioWrapper .ant-radio-button-wrapper {
+     height: auto;
+     padding-inline: 0px;
+   }
