--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@
      --color-brandAsh-700: #7D8191;
      --color-brandAsh-800: #EFECEF;
      --color-brandAsh-900: #E7E4E6;
+     --color-brandAshBold: #C2BCC1;
      --color-brandRed: #F43F5E;
      --color-brandRed-100: #DF2D2D;
      --color-brandGreen: #16A34A;
@@ -31,6 +32,7 @@
      --shadow-formblock: 0px 0px 1px 0px #00000029, 0px 1px 4px 0px #00000014;
      --shadow-light: 0px 1px 2px 0px #00000014;
      --radius-size5: 5px;
+     --radius-size100: 100px;
 
      @keyframes scrollVertical {
        0% {
